[package]
edition = "2018"
name = "wickdb"
version = "0.1.0"

[source.crates-io]
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

[dependencies]
bytes = "0.5.6"
#crc
crc32fast = "1.2.1"
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
#文件系统库
fs2 = "0.4.3"
#非加密哈希算法
fxhash = "0.2.1"
log = "0.4.6"
#操作枚举类
num-derive = "0.3"
#算术运算 类型转换
num-traits = "0.2"
quick-error = "1.2.3"

rand = "0.7.2"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.5.0"
#Snap压缩
snap = "1.0.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
harness = false
name = "benches"
